[gd_scene load_steps=5 format=2]

[ext_resource path="res://enemies/FlyingObstacle.gd" type="Script" id=1]
[ext_resource path="res://enemies/path_curves/linear.tres" type="Curve2D" id=2]

[sub_resource type="OccluderPolygon2D" id=1]
polygon = PoolVector2Array( -32, -4, -32, 4, 32, 4, 32, -4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 32 )

[node name="FlyingObstacle" type="Node2D" groups=[
"light_occluder",
]]
script = ExtResource( 1 )

[node name="Path2D" type="Path2D" parent="."]
position = Vector2( 0, -160 )
curve = ExtResource( 2 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
rotation = 1.5708
rotate = false

[node name="Body" type="Area2D" parent="Path2D/PathFollow2D" groups=[
"enemy",
]]
scale = Vector2( 1e-05, 1e-05 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="Path2D/PathFollow2D/Body"]
rotation = -1.5708
occluder = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="Path2D/PathFollow2D/Body"]
margin_left = -4.0
margin_top = -32.0
margin_right = 4.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D/PathFollow2D/Body"]
shape = SubResource( 2 )

[node name="MoveTween" type="Tween" parent="."]

[node name="ScaleTween" type="Tween" parent="."]

[node name="LightModeTween" type="Tween" parent="."]

[node name="ScaleOutTimer" type="Timer" parent="."]

[node name="DestroyTimer" type="Timer" parent="."]
[connection signal="timeout" from="ScaleOutTimer" to="." method="start_scale_out"]
[connection signal="timeout" from="DestroyTimer" to="." method="destroy"]
